Version 2.02.89 - 
==================================
  Improve backtrace reporting for some dev_manager_ functions.
  Change message severity to log_warn when symlink creation fails.
  Add ability to convert mirror segtype to RAID1 segtype.
  Add ability to convert from linear to RAID1.
  Add ability to extend mirrors with '--nosync' option.
  Fix splitmirror in cluster having different DM/LVM views of storage.
  Fix improper udev settings during suspend/resume for mirror sub-LVs.
  Fix vgsplit when there are mirrors that have mirrored logs.
  Clarify multi-name device filter pattern matching explanation in lvm.conf.5.
  Introduce lv_send_message and dev_manager_send_message.
  Introduce revert_lv for better pvmove cleanup.
  Replace incomplete pvmove activation failure recovery code with a message.
  Abort if _finish_pvmove suspend_lvs fails instead of cleaning up incompletely.
  Change suspend_lvs to call vg_revert internally.
  Change vg_revert to void and remove superfluous calls after failed vg_commit.
  Use execvp for CLVMD restart to preserve environment settings.
  Restart CLVMD with same cluster manager.
  Fix log_error() usage in raid and unknown segtype initialisation.
  Improve testing Makefile.
  Fix install_ocf make target when srcdir != builddir. (2.02.80)
  Support env vars LVM_CLVMD_BINARY and LVM_BINARY in clvmd.
  Fix restart of clvmd (preserve exlusive locks). (2.02.64)
  Add 'Volume Type' lv_attr characters for RAID and RAID_IMAGE.
  Add activation/retry_deactivation to lvm.conf to retry deactivation of an LV.
  Replace open_count check with holders/mounted_fs check on lvremove path.
  Disallow the creation of mirrors (mirror or raid1 segtype) with only one leg.
  Cleanup restart clvmd code (no memory allocation, debug print passed args).
  Add all exclusive locks to clvmd restart option args.
  Always send the whole clvmd packet header in refresh commands.
  Add missing error checks for some system calls in cmirrord.